--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --color-01: #00ffff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +20,7 @@
     width: 241px;
     height: 241px;
     border: 1px solid black;
-    background-color: aqua;
+    background-color: var(--color-01);
     border-radius: 50%;
 }
 
