--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 :root {
     --color-01: #00ffff;
+    --color-02: #F2D7D9;
+    --color-03: #D3CEDF;
+    --color-04: #9CB4CC;
+    --color-05: #748DA6;
+    --color-06: #87805E;
+    --color-07: #FF7396;
+    --color-08: #F4E06D;
+    --color-09: #3EC70B;
+    --color-10: #3B44F6;
+    --color-11: #3C2C3E;
 }
 
 * {
@@ -22,6 +32,7 @@
     border: 1px solid black;
     background-color: var(--color-01);
     border-radius: 50%;
+    animation: changeColor 6s ease infinite;
 }
 
 #container .input-data input {
@@ -39,4 +50,18 @@
     margin: 40px 38px 59px 0;
     width: 121px;
     height: 41px;
+}
+
+@keyframes changeColor {
+    0% {background-color: var(--color-01);}
+    10% {background-color: var(--color-02);}
+    20% {background-color: var(--color-03);}
+    30% {background-color: var(--color-04);}
+    40% {background-color: var(--color-05);}
+    50% {background-color: var(--color-06);}
+    60% {background-color: var(--color-07);}
+    70% {background-color: var(--color-08);}
+    80% {background-color: var(--color-09);}
+    90% {background-color: var(--color-10);}
+    100% {background-color: var(--color-11);}
 }
