--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 :root {
     --color-01: #fff;
+    --color-02: #EDD2F3;
+    --color-03: #84DFFF;
+    --color-04: #FFFCDC;
+    --color-05: #516BEB;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+ background-color: var(--color-02);
 }
 
 #container {
@@ -20,7 +28,7 @@
     margin: 40px;
     width: 241px;
     height: 241px;
-    border: 1px solid black;
+    border: 5px solid var(--color-05);
     background-color: var(--color-01);
     border-radius: 50%;
     animation: changeColor 6s ease infinite;
@@ -36,7 +44,8 @@
     text-align: center;
     padding: 10px;
     width: 50%;
-    border: 1px solid black;
+    border: 1px solid var(--color-05);
+    border-radius: 5px;
 }
  
 #container .interation-buttons button:last-child {
@@ -47,7 +56,9 @@
     margin: 40px 38px 59px 0;
     width: 121px;
     height: 61px;
-    border: 1px solid black;
+    background-color: var(--color-03);
+    color: var(--color-05);
+    border-radius: 5px;
 }
 
 @keyframes changeColor {
